# amazon-textract-parser

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
tests/: blocks.json  test_textract_trp.py  test_trp.py
trp/: __init__.py
